# django-ninja-example

./: .gitignore  README.md  pyproject.toml  run.sh
account/: models.py  schemas.py  tests.py  views.py
account/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/utils/: permissions.py  utils.py
healthcare/: models.py  utils.py
healthcare/management/commands/: migrate-base-data.py
healthcare/mappers/: diagnosis_request.py  doctor.py
healthcare/migrations/: 0001_initial.py
healthcare/schemas/: __init__.py  diagnosis_request.py  doctor.py
healthcare/tests/: doctor_test_data.py  test_diagnosis_request.py  test_doctor.py
healthcare/views/: diagnosis_request.py  doctor.py
mysql/: run.sh
